--- a/statics/templates/invoke/$invoke_status_bar.html
+++ b/statics/templates/invoke/$invoke_status_bar.html
@@ -46,6 +46,8 @@
                     <li><a class="dropdown-item" id="sign-out" href="#">Sign out</a></li>
                 </ul>
             </div>
+            {{else}}
+            <a class="btn btn-outline-primary" href="/management/login" role="button">Login</a>
             {{end}}
         </div>
     </div>
