--- a/statics/templates/account/register.html
+++ b/statics/templates/account/register.html
@@ -8,18 +8,18 @@
   <title>{{ .Meta.Name }}</title>
 
     <script src="/assets/statics/dist/vendor.bundle.js"></script>
-    <script src="/assets/statics/dist/login.bundle.js"></script>
+    <script src="/assets/statics/dist/account.bundle.js"></script>
 
   </head>
   <body class="text-center">
     
 <main class="form-signin">
-  <form id="form-signin" class="needs-validation" novalidate>
+  <form id="form-signup" class="needs-validation" novalidate>
     <div class="mb-4 d-flex align-items-center">
       <div class="m-auto" id="main-image" onclick="window.location.href='/'">
       </div>
     </div>
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 fw-normal">Create an account</h1>
 
     <div class="form-floating">
       <input type="text" class="form-control" id="userid" placeholder="Userid" required>
@@ -36,8 +36,8 @@
       </div>
     </div>
 
-    <button class="w-100 btn btn-lg btn-primary p-2" type="button" id="sign-in">Sign in</button>
-    <a class="w-100 p-2" href="/management/register">Create an account</a>
+    <button class="w-100 btn btn-lg btn-primary mt-2 mb-2" type="button" id="sign-up">Sign up</button>
+    <a class="w-100" href="/management/login">Already have an account?</a>
     <p class="mt-5 mb-3 text-muted">&copy;2021–2022</p>
   </form>
 </main>
