--- a/statics/templates/$status_bar.html
+++ b/statics/templates/$status_bar.html
@@ -14,7 +14,7 @@
             <ul id="serviceMenuContent" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="serviceMenu">
                 <input type="text" class="form-control" placeholder="Search..." id="serviceMenuSearch">
                 {{range $_, $pf := .ProtoFiles}}
-                <li><a class="dropdown-item" href="/management/invoke/{{$pf.Meta.ImportPath}}">{{ $pf.Filename }}</a>
+                <li><a class="dropdown-item" href="{{ (call $.InvokePageURLBuilder $pf) }}">{{ $pf.Filename }}</a>
                 </li>
                 {{end}}
             </ul>
