--- a/statics/templates/$status_bar.html
+++ b/statics/templates/$status_bar.html
@@ -3,8 +3,7 @@
 <div class="row border-top border-bottom">
     <div class="col-4 d-flex align-items-center">
         <div class="dropdown">
-            <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="serviceMenu"
-                data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="serviceMenu" data-bs-toggle="dropdown" aria-expanded="false">
                 {{if eq .ServiceIdentifier ""}}
                 [Select To Start]
                 {{else}}
@@ -14,7 +13,8 @@
             <ul id="serviceMenuContent" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="serviceMenu">
                 <input type="text" class="form-control" placeholder="Search..." id="serviceMenuSearch">
                 {{range $_, $pf := .ProtoFiles}}
-                <li><a class="dropdown-item" href="{{ (call $.InvokePageURLBuilder $pf) }}">{{ $pf.Filename }}</a>
+                <li>
+                    <a class="dropdown-item" href="{{ (call $.InvokePageURLBuilder $pf.Meta.ImportPath $.Metadata.ProtoRevision) }}">{{ $pf.Filename }}</a>
                 </li>
                 {{end}}
             </ul>
@@ -27,12 +27,28 @@
         </div>
         <div id="request-action-description" class="text-secondary"></div>
         <div style="display: none;" class="progress">
-            <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                aria-valuemax="100"></div>
+            <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
 
-    <div class="col-4"></div>
+    <div class="col-4 d-flex align-items-center justify-content-end">
+        <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="refMenu" data-bs-toggle="dropdown" aria-expanded="false">
+                {{if eq .Metadata.ProtoRevision ""}}
+                [Latest]
+                {{else}}
+                {{ .Metadata.ProtoRevision }}
+                {{end}}
+            </button>
+            <ul id="refMenuContent" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="refMenu">
+                <input type="text" class="form-control" placeholder="Search..." id="refMenuSearch">
+                {{range $_, $kr := .KnownReferences}}
+                <li><a class="dropdown-item" href="{{ (call $.InvokePageURLBuilder $.ServiceIdentifier $kr.Name) }}">{{ $kr.Name }}</a>
+                </li>
+                {{end}}
+            </ul>
+        </div>
+    </div>
 </div>
 
 {{end}}
